fix collapsing footer and fix nav bar wrapping at larger screen sizes

--- a/media-queries.css
+++ b/media-queries.css
@@ -95,8 +95,11 @@
     #large-nav-bar {
         align-self: flex-start;
         font-size: 1.9rem;
+        justify-content: flex-start;
+
     }
 
+   
     #image1, #image2, #image3, #image4, #image5 {
         height: 600px;
     }
@@ -105,5 +108,31 @@
         grid-template-rows: auto 1fr 1fr auto;
     }
 
+    footer {
+        margin-top: 3rem;
+    }
+
+    body {
+        width: 100%;
+        display: grid;
+        height: 100%;
+        font-family: 'Roboto', sans-serif;
+        line-height: 1.4;
+        grid-template-rows: auto 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-areas: 'h h h h h h h h h h h h'
+                             'w w w w w w w w w w w w'
+                             'w w w w w w w w w w w w'
+                             'w w w w w w w w w w w w'
+                             'f f f f f f f f f f f f';
+      }
+
     
+}
+
+@media (min-width: 1200px) {
+    #large-nav-bar li {
+        padding: 1.5rem;
+    }
+
 }
