--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   line-height: 1.4;
-  grid-template-rows: auto 25% 25% auto;
+  grid-template-rows: auto 1fr 1fr auto;
   grid-template-columns: repeat(12, 1fr);
   grid-template-areas: 'h h h h h h h h h h h h'
                        'w w w w w w w w w w w w'
@@ -47,7 +47,8 @@ header {
 }
 
 #site-wrapper {
-  max-width: 1500px;
+  max-width: 2000px;
+  max-height: 100%;
   width: 100%;
   margin: auto;
   overflow: hidden;
